[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spanbed"
version = "0.1"
authors = [{name="Matthijs Westera", email="m.westera@hum.leidenuniv.nl"}]
description = "Simple command-line utility wrapper around sentence-transformers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["transformers", "torch"]


[project.scripts]
spanbed = "spanbed:main"

[project.urls]
"Homepage" = "https://github.com/mwestera/spanbed"
"Bug Tracker" = "https://github.com/mwestera/spanbed/issues"